@@ -18,6 +18,8 @@ Release 2.0.3-alpha - Unreleased
     YARN-2. Enhanced CapacityScheduler to account for CPU alongwith memory for
     multi-dimensional resource scheduling. (acmurthy)
 
+    YARN-328. Use token request messages defined in hadoop common. (suresh)
+
   IMPROVEMENTS
 
     YARN-223. Update process tree instead of getting new process trees.
